bugfix and documentation